@@ -1,7 +1,12 @@
+2004-11-08  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Fix for a bug in some tile installations for the
+	#1061218 patch. Should be more robust.
+
 2004-11-08  Pascal Scheffers  <pascal@scheffers.net>
 	* tkchat.tcl: More work on jabber history loading, added /(no)log
-        commands and menu options to set message logging behaviour. Added http(s)
-        url RE for jabber mode.
+        commands and menu options to set message logging behaviour. Added 
+	http(s) url RE for jabber mode.
 
 2004-11-07  Pascal Scheffers  <pascal@scheffers.net>
 	* tkchat.tcl: Added jabber history loading
